qol: differentiated /customer/getTickets and /cro/getTickets into getting tickets raised by customers and assigned to cros seperately